--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.5",
     "tether": "^1.4.0"
   },
   "devDependencies": {
